--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <link rel="stylesheet" href="/www/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="www/bootstrap/css/bootstrap.css">
+    <script src="www/jquery/jquery-3.2.1.js"></script>
+    <script src="www/script/login.js"></script>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>请登录系统</title>
 </head>
@@ -14,11 +16,11 @@
 </div>
 <div>    <br/></div>
 <div style="text-align: center">
-    密码：<input id="password"/>
+    密码：<input id="password" type="password"/>
 </div>
 <div>    <br/></div>
 <div style="text-align: center">
-    <!--<button id="login" onclick="login()">登录</button>-->
+    <button id="login">登录</button>
 </div>
 </body>
 </html>
