--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -3,8 +3,9 @@
 <head>
     <link rel="stylesheet" href="www/bootstrap/css/bootstrap.css">
     <script src="www/jquery/jquery-3.2.1.js"></script>
+    <script src="www/script/common/common.js"></script>
     <script src="www/script/login.js"></script>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>请登录系统</title>
 </head>
 <body>
@@ -14,11 +15,11 @@
     用户名：<input id="username"/>
 
 </div>
-<div>    <br/></div>
+<div><br/></div>
 <div style="text-align: center">
     密码：<input id="password" type="password"/>
 </div>
-<div>    <br/></div>
+<div><br/></div>
 <div style="text-align: center">
     <button id="login">登录</button>
 </div>
