--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -10,10 +10,9 @@
 </head>
 <body>
 <h2>欢迎使用</h2>
-<a href="login">CLICK</a>
+<a href="registerPage">新用户注册</a>
 <div style="text-align: center">
     用户名：<input id="username"/>
-
 </div>
 <div><br/></div>
 <div style="text-align: center">
