--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -12,7 +12,7 @@
 <h2>欢迎使用</h2>
 <a href="registerPage">新用户注册</a>
 <div style="text-align: center">
-    用户名：<input id="username"/>
+    用户ID：<input id="userId"/>
 </div>
 <div><br/></div>
 <div style="text-align: center">
